@@ -3,62 +3,48 @@ package com.microservices.jury_service.config;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
-import io.swagger.v3.oas.models.info.License;
 import io.swagger.v3.oas.models.servers.Server;
 import io.swagger.v3.oas.models.tags.Tag;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class SwaggerConfig {
 
     @Bean
-    public OpenAPI customOpenAPI() {
+    public OpenAPI juryServiceOpenAPI() {
         return new OpenAPI()
                 .info(new Info()
-                        .title("API Service Jury")
-                        .version("1.0")
+                        .title("Jury Service API")
+                        .version("1.0.0")
                         .description("""
-                                ## Service de gestion des jurys pour les soutenances
-                                
-                                Ce microservice gère les membres du jury et leurs affectations aux soutenances.
-                                
-                                ### Fonctionnalités clés :
-                                - **Membres Jury** : CRUD des enseignants pouvant faire partie d'un jury
-                                - **Affectations** : Assignation des rôles (président, rapporteur, examinateur) aux soutenances
-                                - **Vérifications** : Contrôle des doublons d'affectation
-                                - **Consultation** : Liste des jurys par soutenance
-                                
-                                ### Rôles possibles :
-                                - `président` : Préside la soutenance
-                                - `rapporteur` : Évalue le travail
-                                - `examinateur` : Participe à l'évaluation
-                                
-                                ### Stack Technique :
-                                - **Backend** : Spring Boot 3.2.5
-                                - **Base de données** : MongoDB Atlas
-                                - **Documentation** : OpenAPI 3 / Swagger UI
+                                API du service jury pour la gestion des soutenances.
+
+                                Responsabilites:
+                                - Gestion des membres de jury.
+                                - Affectation des roles president, rapporteur et examinateur.
+                                - Verification de l'existence de la soutenance via soutenance-service.
+                                - Exposition des affectations pour soutenance-service et notes-service.
                                 """)
                         .contact(new Contact()
-                                .name("Service Jury - Gestion des Soutenances")
-                                .email("jury-service@microservices.com")
-                                .url("https://github.com/microservices/jury-service"))
-                        .license(new License()
-                                .name("Apache 2.0")
-                                .url("https://www.apache.org/licenses/LICENSE-2.0.html")))
+                                .name("Equipe Backend")
+                                .email("jury-service@soutenance.local")))
                 .servers(List.of(
                         new Server()
                                 .url("http://localhost:8082")
-                                .description("Serveur Local (Développement)"),
+                                .description("Jury service direct"),
                         new Server()
-                                .url("https://api-jury.soutenance.fr")
-                                .description("Serveur de Production")))
-                .tags(Arrays.asList(
-                        new Tag().name("Membre Jury").description("Gestion des membres du jury (CRUD)"),
-                        new Tag().name("Affectation Jury").description("Gestion des affectations des jurys aux soutenances")
+                                .url("http://localhost:8089")
+                                .description("Gateway local")))
+                .tags(List.of(
+                        new Tag()
+                                .name("Membre Jury")
+                                .description("CRUD des enseignants membres du jury"),
+                        new Tag()
+                                .name("Affectation Jury")
+                                .description("Affectation des membres aux soutenances")
                 ));
     }
 }
